--- a/cookbooks/ci_infrastructure_cf/templates/default/jenkins_job.xml.erb
+++ b/cookbooks/ci_infrastructure_cf/templates/default/jenkins_job.xml.erb
@@ -41,7 +41,7 @@ scm = job['scm']
   <concurrentBuild>false</concurrentBuild>
   <builders>
     <hudson.tasks.Shell>
-      <command><%= CGI::escapeHTML(job['build_cmd']) %></command>
+      <command><%= CGI::escapeHTML(job['build_cmd'] || '') %></command>
     </hudson.tasks.Shell>
   </builders>
   <publishers/>
